[package]
name = "taiko-wiki-data-analysis"
version = "0.1.0"
authors = ["TonalidadeHidrica"]
edition = "2018"

[[bin]]
name = "download-backup"

[dependencies]
reqwest = { version = "0.10.4", features = ["stream"] }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["macros"] }
scraper = "0.11.0"
itertools = "0.9.0"
async-std = "1.5.0"
