[package]
name = "taiko-wiki-data-analysis"
version = "0.1.0"
authors = ["TonalidadeHidrica"]
edition = "2018"

[[bin]]
name = "download-backup"

[[bin]]
name = "collect-songs"

[dependencies]
reqwest = { version = "0.10.4", features = ["stream"] }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["macros"] }
scraper = "0.12.0"
itertools = "0.9.0"
async-std = "1.5.0"
encoding_rs = "0.8.22"
html5ever = "0.25.1"
lazy_static = "1.4.0"
if_chain = "1.0.0"
num-derive = "0.3.0"
num-traits = "0.2.11"
regex = "1.3.7"
hex = "0.4.2"
ego-tree = "0.6.2"
indexmap = "1.3.2"
