[package]
name = "taiko-wiki-data-analysis"
version = "0.1.0"
authors = ["TonalidadeHidrica"]
edition = "2021"

[[bin]]
name = "download-backup"

[[bin]]
name = "collect-songs"

[dependencies]
anyhow = "1.0.44"
assert_matches = "1.5.0"
async-std = "1.5.0"
auto_enums = "0.7.12"
clap = "3.0.0-beta.5"
derive_more = "0.99.16"
ego-tree = "0.6.2"
either = "1.6.1"
encoding_rs = "0.8.22"
entities = "1.0.1"
enum-set = "0.0.8"
fs-err = "2.6.0"
futures = "0.3.4"
getset = "0.1.2"
glob = "0.3.0"
hex = "0.4.3"
html5ever = "0.25.1"
if_chain = "1.0.0"
indexmap = "1.3.2"
indicatif = "0.16.2"
itertools = "0.10.1"
lazy_static = "1.4.0"
len-trait = "0.6.1"
loop_unwrap = { git = "https://github.com/TonalidadeHidrica/loop_unwrap", branch = "master" }
num-derive = "0.3.0"
num-traits = "0.2.11"
once_cell = "1.8.0"
pcre = { git = "https://github.com/TonalidadeHidrica/rust-pcre", branch = "pcre-v8.31" }
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["stream"] }
scraper = "0.12.0"
smallvec = "1.7.0"
thiserror = "1.0.30"
tokio = { version = "0.2.13", features = ["macros"] }

[features]
